--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,3 @@
 #APP Configurations
-VITE_APP_URL=http://localhost:5173/
-VITE_API_MAIN_URL=http://localhost:8081/
-VITE_API_LANDING_PAGES_URL=http://localhost:8082/
+VITE_APP_URL=https://product-in-webapp.vercel.app/
+VITE_API_MAIN_URL=https://product-in-api.onrender.com/
