--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 #APP Configurations
-VITE_APP_URL=https://product-in-webapp.vercel.app/
-VITE_API_MAIN_URL=https://product-in-api.onrender.com/
+VITE_APP_URL=https://product-in-webapp.vercel.app
+VITE_API_MAIN_URL=https://product-in-api.onrender.com
